--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,3 +12,19 @@ dependencies = [
 
 [dependency-groups]
 dev = []
+
+[tool.ruff.lint]
+select = [
+    # pycodestyle
+    "E",
+    # Pyflakes
+    "F",
+    # pyupgrade
+    "UP",
+    # flake8-bugbear
+    "B",
+    # flake8-simplify
+    "SIM",
+    # isort
+    "I",
+]
