--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "ipykernel>=6.30.1",
+    "jax>=0.7.2",
+    "jax-metal>=0.1.1",
     "numpy>=2.3.3",
     "torch>=2.8.0",
     "torchaudio>=2.8.0",
