--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "ipykernel>=6.30.1",
     "jax>=0.7.2",
     "jax-metal>=0.1.1",
+    "mypy>=1.18.2",
     "numpy>=2.3.3",
     "torch>=2.8.0",
     "torchaudio>=2.8.0",
